generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DB_URL")
}

model User {
  id       String   @id @default(uuid())
  name     String   @db.VarChar(100)
  email    String   @unique @db.VarChar(100)
  password String   @db.VarChar(100)
  address  String?
  long     Float?
  lat      Float?
  role     UserRole

  Customer Customer?
  Owner    Owner?
}

model Customer {
  id     String  @id @default(uuid())
  User   User    @relation(fields: [userId], references: [id])
  userId String  @unique
  Order  Order[]
}

model Owner {
  id      String    @id @default(uuid())
  User    User      @relation(fields: [userId], references: [id])
  userId  String    @unique
  Service Service[]
}

model Service {
  id    Int         @id @default(autoincrement())
  type  ServiceType
  price Int
  Order Order[]

  Owner   Owner  @relation(fields: [ownerId], references: [id])
  ownerId String
}

model Order {
  id            String      @id @default(uuid())
  estimatedTime DateTime
  laundryIn     DateTime
  status        OrderStatus

  Customer   Customer @relation(fields: [customerId], references: [id])
  customerId String
  Service    Service  @relation(fields: [serviceId], references: [id])
  serviceId  Int
}

enum OrderStatus {
  PICKUP
  WASHING
  CLEANING
  DRYING
  DELIVER
}

enum ServiceType {
  CUCI_BASAH
  CUCI_KERING
  CUCI_SETRIKA
}

enum UserRole {
  OWNER
  CUSTOMER
}
