@startuml

skinparam linetype ortho

enum OrderStatus {
  PICKUP
  WASHING
  CLEANING
  DRYING
  DELIVER
}

enum ServiceType {
  CUCI_BASAH
  CUCI_KERING
  CUCI_SETRIKA
}

enum UserRole {
  OWNER
  CUSTOMER
}

left to right direction
skinparam packageStyle rect

package "Entities" {
  entity User {
    * id: String
    * name: String
    * email: String
    * password: String
    address: String?
    long: Float?
    lat: Float?
    * role: UserRole
    Customer: Customer?
    Owner: Owner?
  }

  entity Customer {
    * id: String
    * User: User
    * userId: String
    * Order: Order[]
  }

  entity Owner {
    * id: String
    * User: User
    * userId: String
    * Service: Service[]
  }

  entity Service {
    * id: Int
    * type: ServiceType
    * price: Int
    * Order: Order[]
    * Owner: Owner
    * ownerId: String
  }

  entity Order {
    * id: String
    * estimatedTime: DateTime
    * laundryIn: DateTime
    * status: OrderStatus
    * Customer: Customer
    * customerId: String
    * Service: Service
    * serviceId: Int
  }

  User ||--o Customer
  User ||--o Owner
  Owner ||--o Service
  Customer }|--|| Order
  Order ||--|{ OrderStatus
  Service ||--|{ ServiceType
  User ||--|| UserRole
}

@enduml

